Travel::Status::DE::IRIS 1.31 - Thu Aug 08 2019

    * Travel::Status::DE::IRIS::Stations: Add EVA/UIC station numbers and use
      full names for non-german stations.

Travel::Status::DE::IRIS 1.30 - Wed Jul 17 2019

    * Result: Add ->station and ->station_uic accessors. These are useful to
      determine which station an individual train belongs to when requesting
      departures of multiple stations at once using the "with_related" option.

Travel::Status::DE::IRIS 1.29 - Tue Jul 09 2019

    * Add QoS code 72 (no info/entertainment system available)
    * Fix erroneous QoS codes 83, 91, 92

Travel::Status::DE::IRIS 1.28 - Sun Jun 23 2019

    * Add 234 stations missing from regular DB Open Data station list
    * Add delay code 14 (Technische Störung am Bahnhof)

Travel::Status::DE::IRIS 1.27 - Wed Jun 05 2019

    * Add station Berlin Zoologischer Garten (S)

Travel::Status::DE::IRIS 1.26 - Fri May 31 2019

    * Fix DS100 code for Berlin Westkreuz
    * Add station Bonn UN Campus

Travel::Status::DE::IRIS 1.25 - Mon Apr 29 2019

    * Do not ignore trains with arrival < lookahead, even if departure >=
      lookahead.
    * Add delay code 66 (flooded area)

Travel::Status::DE::IRIS 1.24 - Sat Mar 02 2019

    * Remove erroneous double entry for Düsseldorf-Bilk
    * Fix a warning when encountering unusual train types

Travel::Status::DE::IRIS 1.23 - Sat Dec 29 2018

    * Ignore apparently useless "ZOB" (central omnibus station) links at most
      main stations. This decreases the average runtime and also fixes
      some S-Bahn trains being reported twice in München Hbf.
    * Result->qos_messages: Skip superseded messages. They're still present in
      ->messages.
    * Result->route_interesting: Filter Hbf suffixes (not just "Hbf"); include
      .hl.n (czech main station).

Travel::Status::DE::IRIS 1.22 - Sun Dec 16 2018

    * Add delay code 4 (unforeseen staff shortage, thanks to Fabian Schwarz)