@@ -1,3 +1,8 @@
+Travel::Status::DE::IRIS 1.32 - Thu Aug 22 2019
+
+    * Travel::Status::DE::IRIS::Stations: Add geocoordinates fo some swiss
+      and austrian stations
+
 Travel::Status::DE::IRIS 1.31 - Thu Aug 08 2019
 
     * Travel::Status::DE::IRIS::Stations: Add EVA/UIC station numbers and use
